--- a/timetable.htm
+++ b/timetable.htm
@@ -6,21 +6,23 @@
 		<title>SNUTT - 2012 여름학기</title> 
 		<link href="/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
-		<link href="/stylesheets/tinyscrollbar.css" media="all" rel="stylesheet" type="text/css" /> 
+		<link href="/stylesheets/timetable.mobile.480.css" media="handheld, only screen and (max-device-width: 480px)" type="text/css" rel="stylesheet" />
+
+		<link href="/stylesheets/jquery.jrating.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/jquery-ui-1.8.17.custom.css" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/bootstrap-responsive.min.css" media="all" rel="stylesheet" type="text/css" /> 
 		<script src="/javascripts/jquery.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script> 
-		<script src="/javascripts/jquery.form.js" type="text/javascript"></script> 
-		<script src="/javascripts/jquery.tinyscrollbar.min.js" type="text/javascript"></script> 
+		<script src="/javascripts/jquery.jrating.js" type="text/javascript"></script> 
+		<script src="/javascripts/jquery.bbq.min.js" type="text/javascript"></script> 
 
 		<script src="/javascripts/utils.js" type="text/javascript"></script> 
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script> 
 		<script src="/javascripts/timetable.js" type="text/javascript"></script> 
-		<script src="/javascripts/exportpng.js" type="text/javascript"></script> 
-		<script src="/javascripts/canvas2image.js" type="text/javascript"></script> 
 		<script src="/javascripts/base64.js" type="text/javascript"></script> 
+		<script src="/javascripts/canvas2image.js" type="text/javascript"></script> 
+		<script src="/javascripts/exportpng.js" type="text/javascript"></script> 
 
 		<script type="text/javascript">
 
@@ -60,8 +62,8 @@
         });
       } 
     </script>
-
 		<!-- facebook test end -->
+
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
@@ -69,12 +71,14 @@
 					<ul class="nav" id="main_navigation">
 						<li class="active"><a href="#search" id="nav_search_result" data-toggle="tab">검색결과</a></li>
 						<li><a href="#my_courses" data-toggle="tab" rel="tooltip" id="nav_my_courses">내 강의 <span class="badge badge-info" id="my_courses_credit">0학점</span></a></li>
-						<li><a href="#export" id="nav_export" data-toggle="tab">내보내기</a></li>
+						<li id="export_li"><a href="#export" id="nav_export" data-toggle="tab">내보내기</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="container">
+			<div id="rating">
+			</div>
 			<div id="content_wrapper">
 				<div id="search_form_container">
 					<form class="well form-search" id="search_form">
@@ -201,12 +205,12 @@
 						<thead>
 							<tr>
 								<th>&nbsp;</th>
-								<th>월요일</th>
-								<th>화요일</th>
-								<th>수요일</th>
-								<th>목요일</th>
-								<th>금요일</th>
-								<th>토요일</th>
+								<th class="mon">월요일</th>
+								<th class="tue">화요일</th>
+								<th class="wed">수요일</th>
+								<th class="thu">목요일</th>
+								<th class="fri">금요일</th>
+								<th class="sat">토요일</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -215,140 +219,140 @@
 									<span class="period">0교시</span><br />
 									<span class="time">08:00~09:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">1교시</span><br />
 									<span class="time">09:00~10:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">2교시</span><br />
 									<span class="time">10:00~11:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">3교시</span><br />
 									<span class="time">11:00~12:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">4교시</span><br />
 									<span class="time">12:00~13:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">5교시</span><br />
 									<span class="time">13:00~14:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">6교시</span><br />
 									<span class="time">14:00~15:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">7교시</span><br />
 									<span class="time">15:00~16:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">8교시</span><br />
 									<span class="time">16:00~17:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">9교시</span><br />
 									<span class="time">17:00~18:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">10교시</span><br />
 									<span class="time">18:00~19:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">11교시</span><br />
 									<span class="time">19:00~20:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">12교시</span><br />
 									<span class="time">20:00~21:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
 								<th rowspan="2">
 									<span class="period">13교시</span><br />
 									<span class="time">21:00~22:00</span>
 								</th>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 							<tr>
-								<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+								<td class="mon">&nbsp;</td><td class="tue">&nbsp;</td><td class="wed">&nbsp;</td><td class="thu">&nbsp;</td><td class="fri">&nbsp;</td><td class="sat">&nbsp;</td>
 							</tr>
 						</tbody>
 					</table>
@@ -380,6 +384,9 @@
 				</p>
 				<p>
 				<a href="mailto:secury@wafflestudio.com">secury@wafflestudio.com</a>
+				</p>
+				<p>
+				최근 수강편람 업데이트 : <span id="data_updated_at"></span>
 				</p>
 			</div>
 
